# Station_meteo

./: README.md  boutons.c  boutons.h
Ana-Maria boutons essai==menus/: Makefile  affichage.c  affichage.h  boutons.c  boutons.h  capteurs.c  capteurs.h  main.c  main0.c  main1.c  rgt_meteo  rgt_meteo.gdb  test1_Ana  test2_Ana  test2_Ana.gdb  test_Ana  test_Ana.gdb
Code_affichage/: affichage  affichage.c  affichage.gdb  affichage.h
Code_boutons/: boutons.c  boutons.h  boutons.h.gch
STATION_METEO_2018/: Makefile  affichage.h  capteurs  capteurs.c  capteurs.gdb  capteurs.h  capteurs.h.gch  main.c  mwtypes.h.gch  rgt_meteo  rgt_meteo.gdb
Station méteo view/: HelloWorld.gdb  buttons.h  capteurs.c  capteurs.h  main.c  menus.c  prog.gdb  threads.h  xxx  xxx.gdb
code capteur/: test-ADC-capteur  test-ADC-capteur.c  test-ADC-capteur.gdb  test-ADC-capteur.h  test-ADC-capteur.h.gch
dev/: button.h
fichiers_fournis/NFS_File/: Makefile  (+7 more)
src/: Makefile  affichage.c  affichage.h  boutons.c  boutons.h  boutons.h.gch  capteurs.c  capteurs.h  capteurs.h.gch  final_meteo  main.c  menus.c  menus.h  menus.h.gch  mwtypes.h  rgt_meteo  rgt_meteo.gdb  threads.c  threads.h  threads.h.gch
src/examples-with-DevCpp/src/minigui/src/ial/: Makefile.am  auto.c  dummy.c  embest2410.c  fft7202.c  fft7202.h  fxrm9200.c  fxrm9200.h  ial.c  ipaq.h  mc68x328.c
src/examples-with-DevCpp/src/minigui/src/ial/native/: Makefile.in  kbd_tty.c  mou_ms.c  mou_ms3.c  native.h
test_temperature/: Makefile  testTemperature  testTemperature.c  testTemperature.gdb  testTemperature.h  testTemperature.h.gch
(+360 files in other folders)
